--- a/archival/src/app/core/layout/main-footer/main-footer.component.scss
+++ b/archival/src/app/core/layout/main-footer/main-footer.component.scss
@@ -13,7 +13,7 @@
   @media (max-width: 768px) {
     padding-left: 4rem;
     padding-right: 1.5rem;
-    padding-bottom: 3rem;
+    padding-bottom: 2.5rem;
   }
 }
 
