--- a/archival/src/app/features/blueprint/blueprint.component.scss
+++ b/archival/src/app/features/blueprint/blueprint.component.scss
@@ -3,7 +3,6 @@
 .map-container {
   display: flex;
   flex-direction: column;
-  height: 100%;
 }
 
 // Spatial Header
